Fixed pop up text spacing

--- a/css/layouts/blog.css
+++ b/css/layouts/blog.css
@@ -108,6 +108,7 @@ h3 {
     font-family: Georgia, "Cambria", serif;
     color: #444;
     line-height: 1.8em;
+        letter-spacing: 0px;
 }
 .post-meta {
     color: #999;
@@ -180,13 +181,13 @@ h3 {
   border-radius: 5px;
   width: 40%;
   position: relative;
-  transition: all 5s ease;
 }
 
 .popup h2 {
   margin-top: 0;
   color: #333;
   font-family: Tahoma, Arial, sans-serif;
+  letter-spacing: 0px;
 }
 .popup .close {
   position: absolute;
@@ -202,8 +203,10 @@ h3 {
   color: #06D85F;
 }
 .popup .content {
-  max-height: 30%;
-  overflow: auto;
+    font-family: Georgia, "Cambria", serif;
+    color: #444;
+    line-height: 1.8em;
+    letter-spacing: 0px;
 }
 
 
